Fix to make the STS sample work with JDK 1.5
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1197582 13f79535-47bb-0310-9956-ffa450edef68